--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ foreach(var ${vars})
 endforeach()
 
 if(NOT STAGE0_CMAKE_EXECUTABLE_SUFFIX)
-    set(STAGE0_CMAKE_EXECUTABLE_SUFFIX ${CMAKE_EXECUTABLE_SUFFIX-})
+    set(STAGE0_CMAKE_EXECUTABLE_SUFFIX ${CMAKE_EXECUTABLE_SUFFIX})
 endif()
 
 include(ExternalProject)
@@ -44,7 +44,7 @@ ExternalProject_add(stage1
   SOURCE_DIR "${LEAN_SOURCE_DIR}"
   SOURCE_SUBDIR src
   BINARY_DIR stage1
-  CMAKE_ARGS -DSTAGE=1 -DPREV_STAGE=${CMAKE_BINARY_DIR}/stage0 ${CL_ARGS} -DPREV_STAGE_CMAKE_EXECUTABLE_SUFFIX="${STAGE0_CMAKE_EXECUTABLE_SUFFIX-}" BUILD_ALWAYS ON
+  CMAKE_ARGS -DSTAGE=1 -DPREV_STAGE=${CMAKE_BINARY_DIR}/stage0 ${CL_ARGS} -DPREV_STAGE_CMAKE_EXECUTABLE_SUFFIX="${STAGE0_CMAKE_EXECUTABLE_SUFFIX}" BUILD_ALWAYS ON
   INSTALL_COMMAND ""
   DEPENDS stage0
 )
