--- a/src/stdlib.make.in
+++ b/src/stdlib.make.in
@@ -33,6 +33,10 @@ endif
 
 # These can be phony since the inner Makefile will have the correct dependencies and avoid rebuilds
 Init:
+	echo "HELLO=${HELLO}"
+	echo "PREV_STAGE=${PREV_STAGE}"
+	echo "CMAKE_EXECUTABLE_SUFFIX=${CMAKE_EXECUTABLE_SUFFIX}"
+	echo "STAGE0_CMAKE_EXECUTABLE_SUFFIX=${STAGE0_CMAKE_EXECUTABLE_SUFFIX}"
 	echo "PREV_STAGE_CMAKE_EXECUTABLE_SUFFIX=${PREV_STAGE_CMAKE_EXECUTABLE_SUFFIX}"
 # Use `+` to use the Make jobserver with `leanmake` for parallelized builds
 	+"${LEAN_BIN}/leanmake" lib PKG=Init $(LEANMAKE_OPTS) LEANC_OPTS+=-DLEAN_EXPORTING
