use not defined

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ endforeach()
 include(ExternalProject)
 project(LEAN CXX C)
 
-if(NOT STAGE0_CMAKE_EXECUTABLE_SUFFIX)
+if(NOT (DEFINED STAGE0_CMAKE_EXECUTABLE_SUFFIX))
     set(STAGE0_CMAKE_EXECUTABLE_SUFFIX "${CMAKE_EXECUTABLE_SUFFIX}")
 endif()
 
