--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -5,11 +5,14 @@
 # If multiple names are listed, a review by any of them is considered sufficient by default.
 
 /.github/ @Kha @semorrison
+/RELEASES.md @semorrison
 /src/ @leodemoura @Kha
 /src/Init/IO.lean @joehendrix
 /src/kernel/ @leodemoura
 /src/lake/ @tydeu
 /src/Lean/Compiler/ @leodemoura
+/src/Lean/Elab/Tactic/ @semorrison
+/src/Lean/Meta/Tactic/ @leodemoura
 /src/Lean/Parser/ @Kha
 /src/Lean/PrettyPrinter/ @Kha
 /src/Lean/Server/ @mhuisi
