--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -1,24 +1,17 @@
 name: Check PR title for commit convention
 
 on:
-  # needs read/write GH token, do *not* execute arbitrary code from PR
-  pull_request_target:
-    types: [opened]
+  pull_request:
+    types: [opened, edited]
 
 jobs:
   check-pr-title:
     runs-on: ubuntu-latest
     steps:
-      - name: Check Commit Message
+      - name: Check PR title
         uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             if (!/^(feat|fix|doc|style|refactor|test|chore|perf): .*[^.]($|\n\n)/.test(context.payload.pull_request.title)) {
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                body: 'Thanks for your contribution! Please make sure the PR title and description follow our [Commit Convention](https://leanprover.github.io/lean4/doc/dev/commit_convention.html).',
-              });
+              core.setFailed('the PR title does not follow the [Commit Convention](https://leanprover.github.io/lean4/doc/dev/commit_convention.html).'),
             }
