--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -13,5 +13,5 @@ jobs:
         with:
           script: |
             if (!/^(feat|fix|doc|style|refactor|test|chore|perf): .*[^.]($|\n\n)/.test(context.payload.pull_request.title)) {
-              core.setFailed('PR title does not follow the [Commit Convention](https://leanprover.github.io/lean4/doc/dev/commit_convention.html).');
+              core.setFailed('PR title does not follow the Commit Convention (https://leanprover.github.io/lean4/doc/dev/commit_convention.html).');
             }
