--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -370,7 +370,8 @@ jobs:
   all-done:
     needs: build
     name: Build matrix complete
-    steps: []
+    steps:
+    - run: echo "Nothing to see here"
 
   # This job creates releases from tags
   # (whether they are "unofficial" releases for experiments, or official releases when the tag is "v" followed by a semver string.)
